--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,19 @@
   font-size: calc(10px + 2vmin);
   color: #414141;
   font-weight: 600;
+}
+
+.App > div {
+  padding-left: 16rem;
+  padding-right: 16rem;
+}
+
+.Header h1 {
+  padding-left: 16rem;
+  padding-right: 16rem;
+}
+
+.Header h2 {
   padding-left: 16rem;
   padding-right: 16rem;
 }
